Changelog:

Version 1.0
 - Fix Bug for Mod not loading on OXCE 7.7.x
 - Fix Plasma Blade not being available in lategame to player
 - Fix Mars being only half height
 - Fix globa texture asignment, which prevent Terrorsites to spawn properly
 - Adjust Raceweights for more Snakemen
 - Adjust Terror Occurance and Scoring
 - Adjust Soitter Zombies to be more dangerous
 - Add more randomness to Alien Mission starts
 - Add Alien Base initiated Terror Missions without Scout Ships
 - Add more Upgrade Options to X-Com Tanks
 - Add Upgrade Option for Medikts
 - Add Smoke Launcher to all Tanks (free ammo)
 - Add Walkertank/Laser (Sectopod converted)
 - Refactor Drone Smoke (ammo is free now)
 - Disable Bug Hunt mode (Non vanilla behaviour)

Version 0.99.9
 - Adjust UFO Extender Accuracy Settings
 - Adjust Armor Resistence for Reinforced Suits
 - Adjust Armor Resistance for some Lategame Enemies
 - Fix wrong/missing Sprite for Spitterzombie
 - Fix Plasma Weapon Research Bug
 - Fix Plasma Pistol Elerium Clip hitAnimation not showing
 - Fix Spitter Zombie not spawning from Spitter melee attacks
 - Fix Sortorder for HC and AC Ammo
 - Fix missing listOrder for Spitter Melee Weapon
 - Fix missing UFO Extender settings for Laserrifle/Taser Pistol
 - Fix missing arcingshot for Chryssalid Spitter
 - Fix missinf UFO Extender settings for Chryssalid Spitter Ranged Weapon
 - Add OXCE Missioninteruption for successful Ground Assault
 - Add OXCE option to let Countries rejoin the Council once Pactbase is defeated
 - Add OXCE medikit DOS targetting behaviour for drones and medikits
 - Add OXCE recommended and fixed Useroption

Version 0.99.8
 - Add Support for OXCE (HOOORAY!!!)
 - Add Elerium High Explosive Ammo for Heavy Cannon and Auto Cannon
 - Add EleriumClips for Aliens
 - Add more Civilians
 - Add Chryssalid Spitter Zombie
 - Add Terrain Pack 4.3 Licence file
 - Add Terrain Pack 4.3 Author List
 - Add Terrain Pack Licence Graphic (by-nc-sa.png)