@@ -5,11 +5,12 @@ Version 1.0
  - Fix Plasma Blade not being available in lategame to player
  - Fix Mars being only half height
  - Fix globa texture asignment, which prevent Terrorsites to spawn properly
+ - Rebalance lategame enemy PSI DEF
  - Adjust Raceweights for more Snakemen
  - Adjust Terror Occurance and Scoring
  - Adjust Soitter Zombies to be more dangerous
  - Add more randomness to Alien Mission starts
- - Add Alien Base initiated Terror Missions without Scout Ships
+ - Add Alien Base execute Missions (Terror, Harvest, Abduction, Base), No Scouts
  - Add more Upgrade Options to X-Com Tanks
  - Add Upgrade Option for Medikts
  - Add Smoke Launcher to all Tanks (free ammo)
